; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_asmparser.c_asmparser_dcl_output_unsupported.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_asmparser.c_asmparser_dcl_output_unsupported.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asm_parser = type { i32, i32 }
%struct.shader_reg = type { i32 }

@.str = private unnamed_addr constant [64 x i8] c"Line %u: Output declaration unsupported in this shader version\0A\00", align 1
@PARSE_ERR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.asm_parser*, i32, i32, %struct.shader_reg*)* @asmparser_dcl_output_unsupported to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @asmparser_dcl_output_unsupported(%struct.asm_parser* %0, i32 %1, i32 %2, %struct.shader_reg* %3) #0 {
  %5 = alloca %struct.asm_parser*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.shader_reg*, align 8
  store %struct.asm_parser* %0, %struct.asm_parser** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store %struct.shader_reg* %3, %struct.shader_reg** %8, align 8
  %9 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %10 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %11 = getelementptr inbounds %struct.asm_parser, %struct.asm_parser* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @asmparser_message(%struct.asm_parser* %9, i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = load %struct.asm_parser*, %struct.asm_parser** %5, align 8
  %15 = getelementptr inbounds %struct.asm_parser, %struct.asm_parser* %14, i32 0, i32 0
  %16 = load i32, i32* @PARSE_ERR, align 4
  %17 = call i32 @set_parse_status(i32* %15, i32 %16)
  ret void
}

declare dso_local i32 @asmparser_message(%struct.asm_parser*, i8*, i32) #1

declare dso_local i32 @set_parse_status(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
